<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_tracker</name>
  <version>0.0.0</version>
  <description>The dynamic_obstacle_tracker package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>libpcl-all-dev</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
